@@ -274,7 +274,6 @@ void DeepZoom::run( Session* session, const std::string& argument ){
     }
   }
 
-  session->out->printf( "\r\n" );
 
   if( session->out->flush() == -1 ) {
     if( session->loglevel >= 1 ){
