@@ -263,7 +263,6 @@ void Zoomify::run( Session* session, const std::string& argument ){
     }
   }
 
-  session->out->printf( "\r\n" );
 
   if( session->out->flush() == -1 ) {
     if( session->loglevel >= 1 ){
